--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-modal": "^11.5.6",
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.1",
