--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-gesture-handler": "~1.7.0",
     "react-native-modal": "^11.5.6",
     "react-native-screens": "~2.10.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.1",
     "subscriptions-transport-ws": "^0.9.18"
