--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apollo-link-ws": "^1.0.20",
     "apollo-utilities": "^1.3.4",
     "expo": "~39.0.2",
+    "expo-cli": "^4.0.1",
     "expo-status-bar": "~1.0.2",
     "graphql": "^15.4.0",
     "react": "16.13.1",
