--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "apollo-utilities": "^1.3.4",
     "expo": "~39.0.2",
     "expo-blur": "~8.2.0",
-    "expo-cli": "^4.0.4",
+    "expo-cli": "^4.0.8",
     "expo-status-bar": "~1.0.2",
     "graphql": "^15.4.0",
     "react": "16.13.1",
@@ -30,6 +30,7 @@
     "react-native-gesture-handler": "~1.7.0",
     "react-native-modal": "^11.5.6",
     "react-native-screens": "~2.10.1",
+    "react-native-shared-element": "0.7.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.1",
